fix spacing

--- a/style.css
+++ b/style.css
@@ -25,9 +25,8 @@ body {
 }
 
 #playlists-wrapper{
-    padding-top:20%;
+    padding-top:10%;
     padding-bottom:10%;
-
 }
 
 
